Bug 432854 - Python code generator create files for classes that are encapsulated by containers
Summary: Python code generator create files for classes that are encapsulated by conta...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: exporter (other bugs)
Version First Reported In: Git
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-12 13:26 UTC by patrick
Modified: 2021-03-02 12:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.33.80 (KDE releases 21.04.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description patrick 2021-02-12 13:26:50 UTC
SUMMARY
Files such as vector<Test>.py or list<Test>.py are generated.

STEPS TO REPRODUCE
1. create a class
2. create a function that receives a list of something
3. generate code

OBSERVED RESULT
Files such as vector<Test>.py will be generated


EXPECTED RESULT
Only class types should be generated


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: arch 5.10.12-arch1-1
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.78.0
Qt Version: 5.15

ADDITIONAL INFORMATION
Comment 1 patrick 2021-02-12 13:27:05 UTC
Working on it
Comment 2 Ralf Habacker 2021-02-25 15:32:27 UTC
(In reply to patrick from comment #1)
> Working on it

In case you open a separate merge request for this issue and adds a BUG:432854 statement in the body, an associated link to the merge request will be added to this bug as reference.
Comment 3 Ralf Habacker 2021-03-02 12:04:08 UTC
Git commit f1b17823c3401f7c0d9a92f458ba6ef3a252da7b by Ralf Habacker, on behalf of Patrick José Pereira.
Committed on 02/03/2021 at 12:03.
Pushed by habacker into branch 'master'.

codegenerators: python: Do not create files for classes that has containers
FIXED-IN:2.33.80 (KDE releases 21.04.80)

Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

M  +17   -0    umbrello/codegenerators/python/pythonwriter.cpp
M  +2    -0    umbrello/codegenerators/python/pythonwriter.h

https://invent.kde.org/sdk/umbrello/commit/f1b17823c3401f7c0d9a92f458ba6ef3a252da7b