codegenerators: python: Do not create files for classes that has containers

BUG:432854
FIXED-IN:2.33.80 (KDE releases 21.04.80)

Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>